--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,57 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
-      Blank
+      Ionic
     </ion-title>
+    <!-- <ion-buttons slot="end">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons> -->
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-item class="ion-padding-horizontal ion-padding-top" style="padding-bottom: 8px;">
+    <ion-label position="fixed">Usuario</ion-label>
+    <ion-input type="text" placeholder="Nombre" [(ngModel)]="txUsuario"></ion-input>
+  </ion-item>
+  
+  <ion-item class="ion-padding-horizontal" style="padding-bottom: 8px;">
+    <ion-label position="fixed">Clave</ion-label>
+    <ion-input type="password" [(ngModel)]="txClave" placeholder="Clave"></ion-input>
+  </ion-item>
+
+  <ion-item class="ion-padding-horizontal" style="padding-bottom: 8px;">
+    <ion-label position="fixed">Sitio Web</ion-label>
+    <ion-input type="url" [(ngModel)]="txWeb" placeholder="URL Web">
+    </ion-input>
+  </ion-item>
+
+  <ion-item class="ion-padding-horizontal" style="padding-bottom: 8px;">
+    <ion-label position="fixed">Email</ion-label>
+    <ion-input type="email" [(ngModel)]="txMail" placeholder="Correo"></ion-input>
+  </ion-item>
+
+  <ion-item class="ion-padding-horizontal" style="padding-bottom: 8px;">
+    <ion-label position="fixed">Telefono</ion-label>
+    <ion-input type="tel" [(ngModel)]="txTeleFono" placeholder="Teléfono"></ion-input>
+  </ion-item>
+  
+  <ion-item class="ion-padding-horizontal" style="padding-bottom: 8px;">
+    <ion-label position="fixed">Edad</ion-label>
+    <ion-input type="number" [(ngModel)]="txEdad" placeholder="Edad Actual"></ion-input>
+  </ion-item>
+
+  
+  <ion-grid>
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="12">
+        <ion-item>
+            <ion-button (click)="funActualizar()" color="danger" expand=""> Actualizar</ion-button>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <p [innerHTML]="msg"></p>
 </ion-content>
