Más pruebas de estilos.

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,6 +9,7 @@
 <ion-content class="ion-padding-top">
   <ion-button size="small" class="ion-padding-horizontal">Default</ion-button>
   <ion-button size="small" class="ion-padding-horizontal">Default</ion-button>
+  <ion-button size="small" class="ion-padding-horizontal">Default</ion-button>
 </ion-content>
 
 <ion-content>
