--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,8 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <ion-item (click)="navegarA('')">Ingreso</ion-item>
-      <ion-item (click)="navegarA('')">Archivos</ion-item>
+      <ion-item (click)="navegarA('/login')">Ingreso</ion-item>
+      <ion-item (click)="navegarA('/registro')">Registro</ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
