Interface de Registro y Ng en html de cliente-listar.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
     <ion-list>
       <ion-item (click)="navegarA('/login')">Ingreso</ion-item>
       <ion-item (click)="navegarA('/registro')">Registro</ion-item>
+      <ion-item (click)="navegarA('/cliente/listar')">CLI / Listar</ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
