--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,8 +3,11 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>
-      Pruebas
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -47,6 +50,6 @@
       Actualizar Información
     </ion-button>
   </ion-item>
-
+ 
   <p [innerHTML]="msg"></p>
 </ion-content>
