--- a/src/app/cliente/cliente.listar/cliente.listar.page.html
+++ b/src/app/cliente/cliente.listar/cliente.listar.page.html
@@ -14,7 +14,7 @@
 
 <ion-content>
   <ion-list class="ion-padding-horizontal">
-    <ion-item *ngFor = "let item of registros">
+    <ion-item *ngFor = "let item of registros" style="padding-bottom:8px;">
       <ion-icon name="star" slot="start" size="small"></ion-icon>
       <ion-label>{{ item.nombres }}</ion-label>
       <ion-label>{{ item.apellidos }}</ion-label>
