Cliente - actualizar, interfaces hechas.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,9 @@
       <ion-item (click)="navegarA('/cliente/agregar')">
         <ion-label>CLI / Agregar</ion-label>
       </ion-item>
+      <ion-item (click)="navegarA('/cliente/actualizar')">
+        <ion-label>CLI / Actualizar</ion-label>
+      </ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
