--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -3,8 +3,11 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>
-      Registro (Pruebas)
+      Registro Pruebas 
     </ion-title>
   </ion-toolbar>
 </ion-header>
