--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,12 @@
       <ion-item (click)="navegarA('/cliente/actualizar')">
         <ion-label>CLI / Actualizar</ion-label>
       </ion-item>
+      <ion-item (click)="navegarA('/cliente/eliminar')">
+        <ion-label>CLI / Eliminar</ion-label>
+      </ion-item>
+      <ion-item (click)="navegarA('/cliente/leer')">
+        <ion-label>CLI / Leer</ion-label>
+      </ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
