--- a/src/app/cliente/cliente.listar/cliente.listar.page.html
+++ b/src/app/cliente/cliente.listar/cliente.listar.page.html
@@ -39,18 +39,12 @@
     </ion-label>
   </ion-item>
   <ion-list padding>
-    <!-- Recorremos el arreglo de registros utilizando item-->
     <ion-item *ngFor="let item of getRegistros">
-      <!-- Icono al inicio (start)-->
       <ion-icon name="star" slot="start"></ion-icon>
-      <!-- Campos de item -->
       <ion-label>{{item.nombres}}</ion-label>
       <ion-label>{{item.apellidos}}</ion-label>
-      <!-- Icono al final -->
       <ion-icon name="information-circle" slot="end"></ion-icon>
-      <!-- routerlink salta a otra pagina-->
       <ion-button [routerLink]="['/cliente/leer']">Sin ID</ion-button><br />
-      <!-- routerlink salta a otra pagina, pero con id del item-->
       <ion-button [routerLink]="['/cliente/leer',item.id]">Con ID</ion-button><br />
     </ion-item>
   </ion-list>
@@ -61,18 +55,12 @@
     </ion-label>
   </ion-item>
   <ion-list padding>
-    <!-- Recorremos el arreglo de registros utilizando item-->
     <ion-item *ngFor="let item of getRegistrosMetodo()">
-      <!-- Icono al inicio (start)-->
       <ion-icon name="star" slot="start"></ion-icon>
-      <!-- Campos de item -->
       <ion-label>{{item.nombres}}</ion-label>
       <ion-label>{{item.apellidos}}</ion-label>
-      <!-- Icono al final -->
       <ion-icon name="information-circle" slot="end"></ion-icon>
-      <!-- routerlink salta a otra pagina-->
       <ion-button [routerLink]="['/cliente/leer']">Sin ID</ion-button><br />
-      <!-- routerlink salta a otra pagina, pero con id del item-->
       <ion-button [routerLink]="['/cliente/leer',item.id]">Con ID</ion-button><br />
     </ion-item>
   </ion-list>
@@ -83,18 +71,12 @@
     </ion-label>
   </ion-item>
   <ion-list padding>
-    <!-- Recorremos el arreglo de registros utilizando item-->
-    <ion-item *ngFor="let item of this.cliServPublic.getRegistrosCopia">
-      <!-- Icono al inicio (start)-->
+    <ion-item *ngFor="let item of this.clivServPublic.getRegistrosCopia">
       <ion-icon name="star" slot="start"></ion-icon>
-      <!-- Campos de item -->
       <ion-label>{{item.nombres}}</ion-label>
       <ion-label>{{item.apellidos}}</ion-label>
-      <!-- Icono al final -->
       <ion-icon name="information-circle" slot="end"></ion-icon>
-      <!-- routerlink salta a otra pagina-->
       <ion-button [routerLink]="['/cliente/leer']">Sin ID</ion-button><br />
-      <!-- routerlink salta a otra pagina, pero con id del item-->
       <ion-button [routerLink]="['/cliente/leer',item.id]">Con ID</ion-button><br />
     </ion-item>
   </ion-list>  
