--- a/src/app/cliente/cliente.listar/cliente.listar.page.html
+++ b/src/app/cliente/cliente.listar/cliente.listar.page.html
@@ -12,7 +12,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<!-- <ion-content>
   <ion-list class="ion-padding-horizontal">
     <ion-item *ngFor = "let item of registros" style="padding-bottom:8px;">
       <ion-icon name="star" slot="start" size="small"></ion-icon>
@@ -26,11 +26,10 @@
 
       <ion-item *ngIf="!hasProp(item, 'id')">
         <ion-button>Sin ID</ion-button><br/>
-        <!-- [routerLink]="['/cliente/cliente.leer']" -->
       </ion-item>
     </ion-item>
   </ion-list>
-</ion-content>
+</ion-content> -->
 
 <ion-content>
   <ion-item>
