--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,12 +11,12 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <ion-item (click)="navegarA('/login')">
+      <!-- <ion-item (click)="navegarA('/login')">
         <ion-label>Ingreso</ion-label>
       </ion-item>
       <ion-item (click)="navegarA('/registro')">
         <ion-label>Registro</ion-label>
-      </ion-item>
+      </ion-item> -->
       <ion-item (click)="navegarA('/cliente/listar')">
         <ion-label>CLI / Listar</ion-label>
       </ion-item>
