--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,21 @@
       <ion-item (click)="navegarA('/cliente/leer')">
         <ion-label>CLI / Leer</ion-label>
       </ion-item>
+      <ion-item (click)="navegarA('/producto/add')">
+        <ion-label>PRD / Add</ion-label>
+      </ion-item>
+      <ion-item (click)="navegarA('/producto/list')">
+        <ion-label>PRD / List</ion-label>
+      </ion-item>
+      <ion-item (click)="navegarA('/producto/detail')">
+        <ion-label>PRD / Detail</ion-label>
+      </ion-item>
+      <ion-item (click)="navegarA('/producto/edit')">
+        <ion-label>PRD / Edit</ion-label>
+      </ion-item>
+      <ion-item (click)="navegarA('/producto/all')">
+        <ion-label>PRD / All</ion-label>
+      </ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
