Login funcionando con API

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,48 +1,44 @@
 <ion-header [translucent]="true">
     <ion-toolbar>
-        <ion-buttons slot="start">
+        <!-- <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
-        </ion-buttons>
+        </ion-buttons> -->
         <ion-title>Autentificación</ion-title>
-        <ion-buttons slot="end">
-            <ion-back-button defaultHref="/"></ion-back-button>
-        </ion-buttons>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
     <ion-list>
-        <ion-item class="ion-padding-bottom">
-            <ion-img style="height: 100%; width: 100%;" src="assets/shapes.svg">
-            </ion-img>
+        <ion-item lines="none" style="display: flex; justify-content: center; align-items: center; height: 200px;">
+            <!-- <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%;">
+                <ion-col class="ion-text-center"> -->
+                    <img src="assets/img/PROPIEDADES-ELITE-2.png" style="width: 50%;"/>
+                <!-- </ion-col>
+            </ion-row> -->
         </ion-item>
-        <ion-item class="ion-padding-horizontal" style="padding-bottom: 8px;">
-            <ion-icon name="person" item-left style="padding-right: 8px;"></ion-icon>
-            <ion-label position="fixed">Email:</ion-label>
-            <ion-input [(ngModel)]="txEmail" type="text" placeholder="Email"></ion-input>
+        <ion-item class="ion-padding-horizontal">
+            <ion-icon name="person" color="primary" item-left style="padding-right: 8px;"></ion-icon>
+            <ion-input [(ngModel)]="iCorreo" label="Correo electrónico" label-placement="floating" fill="outline" placeholder="Ingrese su correo"></ion-input>
         </ion-item>
-        <ion-item class="ion-padding-horizontal" style="padding-bottom: 8px;"   >
-            <ion-icon name="key" item-left style="padding-right: 8px;"></ion-icon>
-            <ion-label position="fixed">Password:</ion-label>
-            <!--Creamos la variable txPassword en TS-->
-            <ion-input [(ngModel)]="txPassword" type="password" placeholder="Password">
-            </ion-input>
+        <ion-item class="ion-padding-bottom ion-padding-horizontal">
+            <ion-icon name="lock-closed" color="primary" item-left style="padding-right: 8px;"></ion-icon>
+            <ion-input [(ngModel)]="iPassword" label="Contraseña" label-placement="floating" fill="outline" placeholder="Ingrese su contraseña" type="password"></ion-input>
         </ion-item>
     </ion-list>
-    <div class="ion-padding">
-        <ion-button (click)="loginUser()" size="small">
-            <ion-icon slot="start" name="add"></ion-icon>
-            Actualizar
-        </ion-button>
-        <br>
-        <ion-button (click)="goToSignup()" size="small">
-            <ion-icon slot="start" name="add"></ion-icon>
-            Nueva cuenta
-        </ion-button>
-        <br>
-        <ion-button (click)="goToResetPassword()" size="small">
-            <ion-icon slot="start" name="add"></ion-icon>
-            ¿Olvidaste tu contraseña?
-        </ion-button>
-    </div>
+    <ion-grid fixed>
+        <ion-row>
+            <ion-col size="4" offset="2">
+                <ion-button fill="outline" expand="block" (click)="loginUser()" size="small">
+                    <ion-icon slot="start" name="log-in-outline"></ion-icon>
+                    Iniciar Sesión
+                </ion-button>
+            </ion-col>
+            <ion-col size="4">
+                <ion-button fill="outline" expand="block" (click)="goToSignup()" size="small">
+                    <ion-icon slot="start" name="duplicate-outline"></ion-icon>
+                    Registrarse
+                </ion-button>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
