--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,13 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <!-- <ion-item (click)="navegarA('/login')">
+      <ion-item (click)="navegarA('/login')">
         <ion-label>Ingreso</ion-label>
       </ion-item>
       <ion-item (click)="navegarA('/registro')">
         <ion-label>Registro</ion-label>
-      </ion-item> -->
-      <ion-item (click)="navegarA('/cliente/listar')">
+      </ion-item>
+      <!-- <ion-item (click)="navegarA('/cliente/listar')">
         <ion-label>CLI / Listar</ion-label>
       </ion-item>
       <ion-item (click)="navegarA('/cliente/agregar')">
@@ -46,7 +46,7 @@
       </ion-item>
       <ion-item (click)="navegarA('/producto/all')">
         <ion-label>PRD / All</ion-label>
-      </ion-item>
+      </ion-item> -->
     </ion-list>
   </ion-content>
 </ion-menu>
