--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,41 +11,11 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <ion-item (click)="navegarA('/login')">
-        <ion-label>Ingreso</ion-label>
+      <ion-item (click)="navegarA('/propiedades')">
+        <ion-label>Propiedades</ion-label>
       </ion-item>
-      <ion-item (click)="navegarA('/registro')">
+      <!-- <ion-item (click)="navegarA('/registro')">
         <ion-label>Registro</ion-label>
-      </ion-item>
-      <!-- <ion-item (click)="navegarA('/cliente/listar')">
-        <ion-label>CLI / Listar</ion-label>
-      </ion-item>
-      <ion-item (click)="navegarA('/cliente/agregar')">
-        <ion-label>CLI / Agregar</ion-label>
-      </ion-item>
-      <ion-item (click)="navegarA('/cliente/actualizar')">
-        <ion-label>CLI / Actualizar</ion-label>
-      </ion-item>
-      <ion-item (click)="navegarA('/cliente/eliminar')">
-        <ion-label>CLI / Eliminar</ion-label>
-      </ion-item>
-      <ion-item (click)="navegarA('/cliente/leer')">
-        <ion-label>CLI / Leer</ion-label>
-      </ion-item>
-      <ion-item (click)="navegarA('/producto/add')">
-        <ion-label>PRD / Add</ion-label>
-      </ion-item>
-      <ion-item (click)="navegarA('/producto/list')">
-        <ion-label>PRD / List</ion-label>
-      </ion-item>
-      <ion-item (click)="navegarA('/producto/detail')">
-        <ion-label>PRD / Detail</ion-label>
-      </ion-item>
-      <ion-item (click)="navegarA('/producto/edit')">
-        <ion-label>PRD / Edit</ion-label>
-      </ion-item>
-      <ion-item (click)="navegarA('/producto/all')">
-        <ion-label>PRD / All</ion-label>
       </ion-item> -->
     </ion-list>
   </ion-content>
