Pagar la reserva de la propiedad funciona con API de transbank.

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
     <ion-item lines="none" style="display: flex; justify-content: center; align-items: center;">
-        <img src="assets/img/PROPIEDADES-ELITE-2.png" style="width: 50%; margin: auto;"/>
+        <img src="assets/img/PROPIEDADES-ELITE-2.png" style="height: 50%; width: 50%; margin: auto; object-fit:scale-down;"/>
     </ion-item>
 
     <ion-grid [fixed]="true">
