--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,6 +28,15 @@
           <h2><strong>Venta {{ d?.valor_propiedad | currency:'$':'symbol':'1.0-2' }}</strong></h2>
         </div>
       </div>
+      <div style="display: flex; justify-content: space-between;">
+        <div>
+          <ion-button expand="block" size="small">¿Reservar?</ion-button>
+        </div>
+        <div class="btn-pagar">
+          <ion-button (click)="pagarReserva()" expand="block" size="small" >Pagar</ion-button>
+        </div>
+      </div>
+      
       <ion-list>
         <ion-item lines="none">
           <ion-icon name="square-outline" slot="start" color="primary"></ion-icon>
