--- a/src/app/propiedades/propiedades.page.html
+++ b/src/app/propiedades/propiedades.page.html
@@ -15,7 +15,7 @@
       <img src="assets/img/DEPARTAMENTO-1V2.jpg" alt="Carrusel" class="carousel-image">
     </swiper-slide>
     <swiper-slide>
-      <img src="assets/img/DEPARTAMENTO-2V2.jpg" alt="Carrusel" class="carousel-image">
+      <img src="as  sets/img/DEPARTAMENTO-2V2.jpg" alt="Carrusel" class="carousel-image">
     </swiper-slide>
     <swiper-slide>
       <img src="assets/img/DEPARTAMENTO-3V2.jpg" alt="Carrusel" class="carousel-image">
