--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -1,4 +1,13 @@
-
+<ion-header>
+  <!-- <ion-toolbar color="primary">
+    <ion-title>Hogares Deluxe</ion-title>
+  </ion-toolbar> -->
+  <ion-toolbar color="light">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
   
 <ion-content>
 
