--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
       <ion-item (click)="navegarA('/propiedades')">
         <ion-label>Propiedades</ion-label>
       </ion-item>
+      <ion-item (click)="navegarA('/registro-prop-usu')">
+        <ion-label>Registro Propiedad</ion-label>
+      </ion-item>
 
       <!-- <ion-item (click)="navegarA('/registro')">
         <ion-label>Registro</ion-label>
