fix #1 small details

--- a/src/app/propiedades/propiedades.page.html
+++ b/src/app/propiedades/propiedades.page.html
@@ -23,7 +23,7 @@
 
   <ion-card>
     <ion-card-header>
-      <ion-card-title>¡Busca tu hogar!</ion-card-title>
+      <ion-card-title style="display: flex; justify-content: center;">¡Busca tu hogar!</ion-card-title>
     </ion-card-header>
   
     <ion-card-content>
