--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,3 @@
-<ion-menu side="start" menuId="first" contentId="main-content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-      <ion-buttons slot="end">
-        <ion-button (click)="cerrarMenu()">
-          <ion-icon name="chevron-forward-outline"></ion-icon>
-        </ion-button>
-      </ion-buttons>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <ion-item (click)="navegarA('/propiedades')">
-        <ion-label>Propiedades</ion-label>
-      </ion-item>
-      <!-- <ion-item (click)="navegarA('/registro')">
-        <ion-label>Registro</ion-label>
-      </ion-item> -->
-    </ion-list>
-  </ion-content>
-</ion-menu>
+<app-sidebar></app-sidebar>
 
 <ion-router-outlet id="main-content"></ion-router-outlet>
